[project]
name = "yarapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Guilherme Holanda Sanches",email = "38058605+holondo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "fastapi (>=0.117.1,<0.118.0)",
    "open-sea @ git+ssh://git@github.com/palverdata/serp_open_sea.git",
    "uvicorn (>=0.36.0,<0.37.0)",
    "pymongo (>=4.15.1,<5.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
